# ForbiddenConfigurations

./: CMakeLists.txt  README.md  clang-tidy-helper.sh
app/: main.cpp
include/: config.h  helpers.h  individual.h  multiconfig.h  myMath.h  population.h
src/: config.cpp  individual.cpp  multiconfig.cpp  myMath.cpp  population.cpp
tests/: config.cpp  main.cpp
